# pumas

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  Test.h  programmingskillz.tex
contrib/: .gitignore  animate.gnuplot  animator.plt  example.cfg  static_solver
data/: all_land.pnm  all_water.pnm  face.pnm  land.pnm  pnm2dat  rivers.pnm  spiral.pnm  three_islands.pnm
include/: Serializer.hpp  Simulator.h  Simulator.hpp  exceptions.hpp  helpers.hpp  landscape.h  landscape.hpp
latex/: header.aux  header.tex  programmingskillz.aux  programmingskillz.out  programmingskillz.tex  programmingskillz.toc  references.tex  sanbox.tex  stable.eps  usstable.eps
report/: report.tex
src/: Serializer.cpp  Simulator.cpp  helpers.cpp  solver.cpp  test-suite.cpp
